--- a/test/deployment.yaml
+++ b/test/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:latest
+        image: nginx:oooff
         ports:
         - containerPort: 80
